feat: Add PDF chat with markdown support and fix CI
- Added chat modal for PDF papers with markdown rendering
- Added copy button for chat responses
- Updated agent with /api/v1/chat endpoint
- Added answerQuestion method in AlphaXivAgent
- Split screen view for generated blog posts
- PDF content trimming to 8000 chars for API limits
- Support for Perplexity (pplx-), Claude (sk-ant-), OpenAI (sk-)
- Fixed package-lock.json in .gitignore for CI/CD

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ main.js
 
 # npm
 node_modules
-package-lock.json
+# package-lock.json is needed for CI/CD
 
 # Don't include the compiled main.js file in the repo.
 # They should be uploaded to GitHub releases instead.
