feat: Enhance blog post generation with paper search and related papers
- Updated blog post generation to support searching for papers by title using ArXiv and Semantic Scholar APIs.
- Introduced a new command for users to search papers and generate blog posts.
- Implemented functionality to find and list related papers based on the original paper's metadata.
- Enhanced the README to reflect new features and usage instructions for the MCP server integration.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["**/*.ts"]
+  "include": ["**/*.ts"],
+  "exclude": ["node_modules", "mcp-server"]
 }
 
