--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "id": "obsixiv",
   "name": "ObsiXiv",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "minAppVersion": "0.15.0",
-  "description": "Generate AlphaXiv-style blog posts from PDF papers using Koog AI",
+  "description": "Generate AlphaXiv-style blog posts from PDF papers using Koog AI. Automatically extracts figures from LaTeX sources.",
   "author": "Danila Biktimirov",
   "authorUrl": "https://github.com/danila.biktimirov",
   "isDesktopOnly": false
