--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "obsixiv",
-  "version": "1.0.0",
-  "description": "Generate AlphaXiv-style blog posts from PDF papers using Koog AI",
+  "version": "1.1.0",
+  "description": "Generate AlphaXiv-style blog posts from PDF papers using Koog AI. Automatically extracts figures from LaTeX sources.",
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
     "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
     "version": "node version-bump.mjs && git add manifest.json versions.json"
   },
-  "keywords": ["obsidian", "obsidian-plugin", "pdf", "arxiv", "koog"],
+  "keywords": [
+    "obsidian",
+    "obsidian-plugin",
+    "pdf",
+    "arxiv",
+    "koog"
+  ],
   "author": "Danila Biktimirov",
   "license": "MIT",
   "devDependencies": {
@@ -20,6 +26,8 @@
     "obsidian": "latest",
     "tslib": "2.4.0",
     "typescript": "4.7.4"
+  },
+  "dependencies": {
+    "fflate": "0.8.2"
   }
 }
-
